# discord-bot

./: .coverage  .cursorignore  .devwatcher.example.json  .dockerignore  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW_SUMMARY.md  CODE_REVIEW_SUMMARY_TH.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FINDINGS.md  MOVE_TAG_v3.3.16.bat  Makefile  PUBLISH_v3.3.16.bat  README.md  RELEASE_NOTES_v3.3.10.md  RELEASE_NOTES_v3.3.11.md  RELEASE_NOTES_v3.3.14.md  RELEASE_NOTES_v3.3.8.md  RELEASE_NOTES_v3.3.9.md  RELEASE_NOTES_v3.4.0.md  SECURITY_AUDIT_REPORT.md  bot.py  check_chat_b023.py  check_db_schema.py  check_schema.py  config.py  create_shortcut.py  db_schema_dump.txt  dump_schema.py  env.example  fix_all_utc.py  fix_asyncio_timeout.py  fix_chat.py  fix_chat_b023.py  fix_chat_syntax.py  fix_ruff.py  (+15 more)
.agent/workflows/: run-tests.md
.claude/: settings.json  settings.local.json
.claude/agents/: coder.md  opposition.md  planner.md  reviewer.md  tester.md
.github/: dependabot.yml
.github/workflows/: ci.yml
cogs/: __init__.py  spotify_handler.py
cogs/ai_core/: README.md  __init__.py  ai_cog.py  api_handler.py  character_tags.py  claude_payloads.py  content_processor.py  context_builder.py  debug_commands.py  emoji.py  fallback_responses.py  imports.py  logic.py  media_processor.py  memory_commands.py  message_queue.py  performance.py  response_mixin.py  response_sender.py  storage.py  (+8 more)
docker/: .dockerignore  Dockerfile  Dockerfile.prod  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
docs/: ARCHITECTURE.md  CODE_AUDIT_GUIDE.md  DATABASE_SCHEMA.md  DEVELOPER_GUIDE.md  INSTALL.md  OWNER_COMMANDS.md  SCHEMA.md  SENTRY.md  TESTING.md  TROUBLESHOOTING.md  index.html  style.css
go_services/: README.md  go.mod  go.sum
native_dashboard/: .gitignore  Cargo.toml  FRONTEND_AUDIT_REPORT.md  README.md  build.rs  faust_base64.txt  package-lock.json  package.json  playwright.config.ts  tauri.conf.json  tsconfig.e2e.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
native_dashboard/capabilities/: default.json
native_dashboard/scripts/: build-release.ps1  build-tauri.ps1  create_desktop_shortcut.py
native_dashboard/src/: bot_manager.rs  database.rs  lib.rs  main.rs
native_dashboard/src-ts/: app-helpers.ts  app.test.ts  app.ts  chat-manager.audit2.test.ts  chat-manager.test.ts  chat-manager.ts  e2e_smoke.test.ts  faust_avatar.ts  history-manager.test.ts  history-manager.ts  shared.ts  types.ts
native_dashboard/src-ts/chat/: context-window.test.ts  context-window.ts  conversation-list.test.ts  conversation-list.ts  conversation-modals.test.ts  conversation-modals.ts  document-attach.test.ts  document-attach.ts  export-picker.ts  formatter.audit2.test.ts  formatter.audit3.test.ts  formatter.audit4.test.ts  formatter.test.ts  formatter.ts  image-attach.test.ts  image-attach.ts  message-template.audit2.test.ts  message-template.test.ts  message-template.ts  prism.test.ts  prism.ts  search.test.ts  search.ts  types.ts  ws-client.test.ts  ws-client.ts
native_dashboard/tests-e2e/: a11y.spec.ts  dashboard-inspection.spec.ts  dashboard-smoke.spec.ts  h5-importmap.spec.ts  h7-csp.spec.ts  interactions.spec.ts  invoke-failures.spec.ts  modal-lifecycle.spec.ts  screenshots.spec.ts  upgrade-guards.spec.ts  visual-regression.spec.ts
native_dashboard/tests-e2e/_fixtures/: mock-tauri.ts
native_dashboard/ui/: app-helpers.js  app-helpers.js.map  app.js  app.test.js  app.test.js.map  chat-manager.js  chat-manager.js.map  faust_avatar.js  faust_avatar.js.map  history-manager.js  history-manager.js.map  index.html  orbital.css  shared.js  shared.js.map  styles.css  types.js  types.js.map
native_dashboard/ui/assets/: faust_base64.txt  set_avatar.js
native_dashboard/ui/chat/: context-window.js  context-window.js.map  conversation-list.js  conversation-list.js.map  conversation-modals.js  conversation-modals.js.map  document-attach.js  document-attach.js.map  export-picker.js  export-picker.js.map  formatter.js  formatter.js.map  image-attach.js  image-attach.js.map  message-template.js  message-template.js.map  prism.js  prism.js.map  search.js  search.js.map  types.js  types.js.map  ws-client.js  ws-client.js.map
native_dashboard/ui/workers/: chart-worker.js  log-worker.js
rust_extensions/: Cargo.toml  README.md
rust_extensions/media_processor/: Cargo.toml  media_processor.pyi
rust_extensions/media_processor/benches/: media_bench.rs
rust_extensions/media_processor/src/: encode.rs  errors.rs  gif.rs  lib.rs  resize.rs
rust_extensions/rag_engine/: Cargo.toml  rag_check.txt  rag_engine.pyi
rust_extensions/rag_engine/benches/: rag_bench.rs
rust_extensions/rag_engine/src/: cosine.rs  errors.rs  index.rs  lib.rs  storage.rs
scripts/: __init__.py  bot_manager.py  build_all.ps1  build_go.ps1  build_rust.ps1  check_balance.py  dev_watcher.py  install_all.ps1  load_test.py  move_tag_v3.3.16.ps1  publish_v3.3.16.ps1  run_tests.ps1  test_bot_manager.py  test_dashboard_chat.py  verify_system.py
temp/: release_notes_v3.3.1.md
tests/: __init__.py  conftest.py  test_ai_cache.py  test_ai_cache_extended.py  test_ai_cog_coverage.py  test_ai_cog_extended.py  test_ai_cog_module.py  test_ai_core.py  test_ai_integration.py  test_ai_modular.py  test_ai_tools_ipc.py  test_alerting.py  test_analytics.py  test_analytics_extended.py  test_analytics_module.py  test_analytics_more.py  test_api_failover.py  test_api_handler.py  test_api_handler_extended.py  test_api_handler_module.py  test_api_handler_new.py  test_api_handler_retry.py  test_audit2_aicore-misc.py  test_audit2_dash-prompt.py  test_audit2_infra.py  test_audit2_logging-ssrf.py  test_audit2_music.py  test_audit2_rust-rag.py  test_audit2_tools-memory.py  test_audit3_ai_edit_defang.py  test_audit3_self_healer.py  test_audit3_url_fetcher.py  test_audit_2026_06_28.py  test_audit_log.py  test_audit_log_module.py  test_boilerplate.py  test_bot_main.py  test_bot_manager.py  test_cache_token_tracker.py  test_character_tags.py  (+139 more)
utils/: __init__.py  fast_json.py  localization.py
(+228 files in other folders)
