[package]
name = "bot-dashboard"
version = "1.0.0"
description = "Discord Bot Dashboard"
authors = ["ME"]
edition = "2021"

[lib]
name = "bot_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.31"
chrono = "0.4"
