[package]
name = "bot-dashboard"
version = "1.0.0"
description = "디스코드 봇 대시보드"
authors = ["ME"]
edition = "2021"

[lib]
name = "bot_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }  # 0.38 available but breaking
sysinfo = "0.31"  # 0.38 available but breaking API
chrono = "0.4"
