[workspace]
resolver = "2"
members = [
    "rag_engine",
    "media_processor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["voraehita25-star"]
license = "MIT"

[workspace.dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
