[workspace]
resolver = "2"
members = [
    "rag_engine",
    "media_processor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["voraehita25-star"]
license = "MIT"

[workspace.dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }  # 0.28 available but breaking API change
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"  # 2.0 available but breaking change
parking_lot = "0.12"
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
