[workspace]
resolver = "2"
members = [
    "rag_engine",
    "media_processor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["voraehita25-star"]
license = "MIT"

[workspace.dependencies]
# `extension-module` is NOT enabled here — each crate re-exports it as a
# default-on feature instead. That feature tells PyO3 to leave the CPython
# symbols unresolved for the interpreter to supply at import time, which is
# right for the .pyd/.so but breaks `cargo test`: a test harness is a normal
# executable and must link libpython, so on Linux the link fails with
# undefined `PyErrStateNormalized::ptraceback` &c. Windows hid this because
# PyO3 links pythonXX.lib there regardless. CI runs the tests with
# --no-default-features; release builds keep the default and stay unchanged.
pyo3 = { version = "0.29" }
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
memmap2 = "0.9"
bytemuck = { version = "1.25", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
# size/index arithmetic on Python-supplied lengths traps instead of wrapping silently
overflow-checks = true
