[package]
name = "rag_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "rag_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
# fs2 dropped — file locking now uses stdlib ``File::lock_exclusive`` /
# ``unlock`` (stable since Rust 1.89), which is per-fd on Linux via
# flock(2) instead of fs2's per-process fcntl locks.

# SIMD optimizations
simsimd = "6.5"

[features]
default = []

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "rag_bench"
harness = false
