[package]
name = "rag_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "rag_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
# fs2 dropped — no advisory file locking is used at all. save() achieves
# crash safety via a per-process-unique temp file (PID + nanos), atomic
# rename (with copy+delete fallback on Windows), and fsync; load() reads
# whatever is on disk. There is NO OS lock, so callers must not assume
# save()/load() are mutually excluded across processes.

# SIMD optimizations
simsimd = "6.5"

[features]
# On by default so `cargo build --release` still produces a loadable .pyd/.so.
# CI's `cargo test --no-default-features` drops it so the test harness can link
# libpython — see the pyo3 note in the workspace manifest.
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "rag_bench"
harness = false
